Module 2 - Commite 2.9 -  Add received data for TextView in  OtherActivity

--- a/AndroidDev_part2/src/main/AndroidManifest.xml
+++ b/AndroidDev_part2/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDEV_part1">
         <activity
+            android:name=".OrderActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivityPart2"
             android:exported="true">
             <intent-filter>
