--- a/AndroidDev_part2/src/main/AndroidManifest.xml
+++ b/AndroidDev_part2/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Shop COMP"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDEV_part1">
