--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "AndroidDEV_part1"
 include ':app'
 include ':AndroidDev_part2'
+include ':AndroidDev_part3'
