--- a/AndroidDev_part3/src/main/AndroidManifest.xml
+++ b/AndroidDev_part3/src/main/AndroidManifest.xml
@@ -3,19 +3,51 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher3"
-        android:label="Part3"
-        android:roundIcon="@mipmap/ic_launcher3_round"
+        android:icon="@mipmap/ic_launcher_module3"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_module3_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDEV_part1">
         <activity
-            android:name=".AndroidDev_part3"
+            android:name=".video"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Audio"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Image"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Animation"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
     </application>
 
