Module 3 - Commite 3.11 - Add button and imageView activity  - MusicPlayer

--- a/AndroidDev_part3/src/main/AndroidManifest.xml
+++ b/AndroidDev_part3/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:theme="@style/Theme.AndroidDEV_part1">
         <activity
             android:name=".MusicPlayer"
-            android:exported="false" />
+            android:exported="false"
+            android:label=""
+            android:theme="@style/MusicPlayer"/>
+        />
         <activity
             android:name=".Video"
             android:exported="false"
