--- a/AndroidDev_part4/src/main/AndroidManifest.xml
+++ b/AndroidDev_part4/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDEV_part1">
         <activity
+            android:name=".cardView"
+            android:exported="false" />
+        <activity
+            android:name=".recycleView"
+            android:exported="false" />
+        <activity
             android:name=".activityListView"
             android:exported="false" />
         <activity
