Module 4 - Commite 4.6 - Refactor desighn main activity

--- a/AndroidDev_part4/src/main/AndroidManifest.xml
+++ b/AndroidDev_part4/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:name=".cardView"
             android:exported="false" />
         <activity
-            android:name=".recycleView"
+            android:name=".Recycler.recycleView"
             android:exported="false" />
         <activity
             android:name=".activityListView"
