Module 5 - Commit 5.5 - Don't work

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include ':AndroidDev_part2'
 include ':AndroidDev_part3'
 include ':AndroidDev_part4'
 include ':AndroidDev_part5'
+include ':Android_modTest'
