--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include ':AndroidDev_part3'
 include ':AndroidDev_part4'
 include ':AndroidDev_part5'
 include ':Android_modTest'
+include ':AndroidDev_part6'
