--- a/AndroidDev_part6/src/main/AndroidManifest.xml
+++ b/AndroidDev_part6/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDEV_part1">
         <activity
+            android:name=".action_activity"
+            android:exported="false" />
+        <activity
             android:name=".settings_activity"
             android:exported="false" />
         <activity
