--- a/AndroidDev_part6/src/main/AndroidManifest.xml
+++ b/AndroidDev_part6/src/main/AndroidManifest.xml
@@ -9,13 +9,43 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDEV_part1">
         <activity
+            android:name=".img_activity"
+            android:exported="false"
+            android:label="Image"
+            android:parentActivityName=".MainActivity_module_6">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity_module_6"/>
+
+        </activity>
+        <activity
             android:name=".action_activity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Action"
+            android:parentActivityName=".MainActivity_module_6">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity_module_6"/>
+        </activity>
+
+
         <activity
             android:name=".settings_activity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Setting"
+            android:parentActivityName=".MainActivity_module_6">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity_module_6"/>
+
+        </activity>
+
         <activity
             android:name=".MainActivity_module_6"
+            android:launchMode="singleTop"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
