--- a/androiddev_part7/src/main/AndroidManifest.xml
+++ b/androiddev_part7/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="Car_DB"
+        android:label="Sport club"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidDEV_part1">
